Chirag/Piyush: introduced a lib folder in the JSs

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
     <head>
         <title>Information Dashboard</title>
         <link type="text/css" rel="stylesheet" media="screen" href="stylesheets/dashboard.css">
-        <script src="javascripts/jquery.js" language=""></script>
+        <script src="javascripts/lib/jquery.min.js" language=""></script>
         <script type="text/javascript" src="javascripts/news.js"></script>
     </head>
 
     <body class="impress-supported impress-enabled impress-on-bored">
         <div id="impress"></div>
-        <script type="text/javascript" src="javascripts/impress.js"></script>
+        <script type="text/javascript" src="javascripts/lib/impress.js"></script>
     </body>
 </html>
