(Chirag/Piyush) Cleaning up unwanted CSS

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Information Dashboard</title>
+        <title>Kaleidoscopez</title>
         <link type="text/css" rel="stylesheet" media="screen" href="stylesheets/dashboard.css">
         <script src="javascripts/lib/jquery.min.js" language=""></script>
         <script type="text/javascript" src="javascripts/news.js"></script>
+        <link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
     </head>
 
-    <body class="impress-supported impress-enabled impress-on-bored">
+    <body class="impress-enabled">
         <div id="impress"></div>
         <script type="text/javascript" src="javascripts/lib/impress.js"></script>
     </body>
