--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
     <head>
         <title>Kaleidoscopez</title>
         <link type="text/css" rel="stylesheet" media="screen" href="stylesheets/dashboard.css">
-        <script src="javascripts/lib/jquery.min.js" language=""></script>
+        <script src="javascripts/lib/jquery.min.js"></script>
+        <script src="javascripts/lib/tinycolor-min.js"></script>
         <script type="text/javascript" src="javascripts/news.js"></script>
         <link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
     </head>
