[Ashwin/Satyam] Added CSS and removes SCSS.

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Kaleidoscopez</title>
-        <link type="text/css" rel="stylesheet" media="screen" href="stylesheets/dashboard.scss">
+        <link type="text/css" rel="stylesheet" media="screen" href="stylesheets/dashboard.css">
         <script src="javascripts/lib/jquery.min.js"></script>
         <script src="javascripts/lib/tinycolor-min.js"></script>
         <script src="javascripts/lib/moment.min.js"></script>
