[Akshay/Sonia] : Generating and displaying QR codes

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
         <script src="javascripts/lib/jquery.min.js"></script>
         <script src="javascripts/lib/tinycolor-min.js"></script>
         <script src="javascripts/lib/moment.min.js"></script>
+        <script src="javascripts/lib/jquery.qrcode.min.js"></script>
         <script type="text/javascript" src="javascripts/news.js"></script>
         <link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
     </head>
