--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,16 @@
     <head>
         <title>Kaleidoscopez</title>
         <link type="text/css" rel="stylesheet" media="screen" href="stylesheets/dashboard.css">
-        <script src="javascripts/lib/jquery.min.js"></script>
-        <script src="javascripts/lib/tinycolor-min.js"></script>
-        <script src="javascripts/lib/moment.min.js"></script>
-        <script src="javascripts/lib/jquery.qrcode.min.js"></script>
-        <script type="text/javascript" src="javascripts/news.js"></script>
         <link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Handlee' rel='stylesheet' type='text/css'>
     </head>
 
     <body class="impress-enabled">
-        <div id="impress"></div>
-        <script type="text/javascript" src="javascripts/lib/impress.js"></script>
+    <div id="impress"></div>
+    <script src="javascripts/lib/jquery.min.js"></script>
+    <script src="javascripts/lib/tinycolor-min.js"></script>
+    <script src="javascripts/lib/moment.min.js"></script>
+    <script type="text/javascript" src="javascripts/lib/impress.js"></script>
+    <script type="text/javascript" src="javascripts/news.js"></script>
     </body>
 </html>
