[Yahya]- Auto refreshing site every 10 minutes

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         <link type="text/css" rel="stylesheet" media="screen" href="stylesheets/dashboard.css">
         <link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Handlee' rel='stylesheet' type='text/css'>
+        <meta http-equiv="refresh" content="600">
     </head>
 
     <body class="impress-enabled">
