--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <head>
+     <head profile="http://www.w3.org/2005/10/profile">
+        <link rel="icon"
+              type="image/ico"
+              href="../images/favicon.ico">
         <title>Kaleidoscopez</title>
         <link type="text/css" rel="stylesheet" media="screen" href="stylesheets/dashboard.css">
         <link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
