(Akshay/Ashwin) Uniform styling across all static pages

--- a/public/faq.html
+++ b/public/faq.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
+    <link href="/stylesheets/lib/bootstrap.min.css" rel="stylesheet"/>
     <link type="text/css" rel="stylesheet" media="screen" href="stylesheets/dashboard.css">
     <link href='http://fonts.googleapis.com/css?family=Sanchez' rel='stylesheet' type='text/css'>
     <style type="text/css">
@@ -8,7 +9,21 @@
     </style>
 </head>
 <body>
-  <div class="about-slide">
+    <div class="navbar navbar-inverse navbar-static-top">
+        <div class="navbar-inner">
+            <div class="container">
+                <a class="brand" href="/">Kaleidoscopez</a>
+                <ul class="nav">
+                    <li><a href="/">Home</a></li>
+                    <li class="active"><a href="/faq">FAQ</a></li>
+                    <li><a href="/about">About Kaleidoscopez</a></li>
+                    <li><a href="/about_us">About Us</a></li>
+                    <li><a href="/contact_us">Contact Us</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="about-slide">
       <h1> FAQ</h1>
       <div class="faq-body">
           <p>Q: Why am I here?
@@ -31,6 +46,6 @@
               </br>A:Well, its the MIT license that binds our application, so its all your to play around with.</p>
 
       </div>
-  </div>
+    </div>
 </body>
 </html>
