--- a/public/about_kaleidoscopez.html
+++ b/public/about_kaleidoscopez.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link href="/stylesheets/lib/bootstrap.min.css" rel="stylesheet"/>
     <link type="text/css" rel="stylesheet" media="screen" href="stylesheets/dashboard.css">
     <link href='http://fonts.googleapis.com/css?family=Sanchez' rel='stylesheet' type='text/css'>
     <style type="text/css">
@@ -8,6 +9,20 @@
     </style>
 </head>
 <body>
+    <div class="navbar navbar-inverse navbar-static-top">
+        <div class="navbar-inner">
+            <div class="container">
+                <a class="brand" href="/">Kaleidoscopez</a>
+                <ul class="nav">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/faq">FAQ</a></li>
+                    <li class="active"><a href="/about">About Kaleidoscopez</a></li>
+                    <li><a href="/about_us">About Us</a></li>
+                    <li><a href="/contact_us">Contact Us</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
     <div class="about-slide">
         <h1>About Kaleidoscopez</h1>
 
