--- a/public/contact_us.html
+++ b/public/contact_us.html
@@ -17,8 +17,8 @@
                     <li><a href="/">Home</a></li>
                     <li><a href="/faq">FAQ</a></li>
                     <li><a href="/about">About Kaleidoscopez</a></li>
-                    <li class="active"><a href="/about_us">About Us</a></li>
-                    <li><a href="/contact_us">Contact Us</a></li>
+                    <li><a href="/about_us">About Us</a></li>
+                    <li class="active"><a href="/contact_us">Contact Us</a></li>
                 </ul>
             </div>
         </div>
